# lemlem

./: .gitignore  CHANGELOG.md  README.md  README_next.md  pyproject.toml  run_tests.py
docs/: TASKMANAGER.md
lemlem/: __init__.py  adapter.py  client.py  codex_app_server.py  control.py  costs.py  gemini_wrapper.py  image_generation.py  json_payload.py  llm_utils.py  model_configs.yaml  models.py
lemlem/cyber_agent/: __init__.py  agent.py  config.py  fastapi.py  store.py  task_backend.py  task_manager.py
lemlem/openclaw_skills/: __init__.py  errors.py  loader.py  models.py  prompting.py  script_runner.py  tool_factory.py
lemlem/skills/: __init__.py  errors.py  frontmatter.py  loader.py  mcp_bridge.py  models.py  prompting.py  script_runner.py  tool_factory.py
tests/: README.md  __init__.py  demo_haiku.py  test_client_fallback.py  test_codex_adapter.py  test_codex_app_server_persistence.py  test_cost_calculation.py  test_cost_extraction.py  test_fake_api.py  test_gemini_schema_sanitization.py  test_gemini_streaming.py  test_gemini_thought_signature_adapter.py  test_gemini_timeout_wrapper.py  test_message_extraction.py  test_model_refresh_ttl.py  test_models_config.py  test_openclaw_agent_integration.py  test_openclaw_mcp_bridge.py  test_openclaw_prompting.py  test_openclaw_script_runner.py  test_openclaw_skill_loader.py  test_parallel_tool_calls.py  test_real_openrouter.py  test_retry_info.py  test_skill_loader.py  test_skill_mcp_bridge.py  test_skill_prompting.py  test_skill_script_runner.py  test_skills_agent_integration.py
(+9 files in other folders)
